# simple-smt

./: .gitignore  .hlint.yaml  CHANGES  SimpleSMT.hs  cabal.project  simple-smt.cabal
.github/workflows/: hlint.yml
Math/: SimpleSMT.hs
Z3/: simple-smt-z3.cabal
Z3/src/: Z3.hs
Z3/src/SimpleSMT/Solver/: Z3.hs
Z3/tests/: Main.hs
examples/: ex1.hs
exe/: DiffSExp.hs  DiffSMT.hs  see.html  view.sh
src/: SimpleSMT.hs
src/SimpleSMT/: SExpr.hs  Solver.hs
src/SimpleSMT/Solver/: Process.hs  Z3.hs
tests/: Main.hs  SExpr.hs  Sources.hs  simple-smt-tests.cabal
tests/SimpleSMT/: Tests.hs
tests/SimpleSMT/Tests/: SExpr.hs  Solver.hs  Sources.hs
