name:                simple-smt
version:             0.9.7
synopsis:            A simple way to interact with an SMT solver process.
description:         A simple way to interact with an SMT solver process.
license:             BSD3
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  CHANGES

library
  hs-source-dirs:      src tests
  ghc-options:         -Wall -Werror
  exposed-modules:     SimpleSMT
                       SimpleSMT.SExpr
                       SimpleSMT.Solver
                       SimpleSMT.Solver.Process
  other-extensions:    Safe, RecordWildCards
  build-depends:       base >=4.8 && <10,
                       async,
                       bytestring >= 0.10,
                       raw-strings-qq,
                       extra >= 1.7,
                       tasty,
                       tasty-hunit,
                       typed-process 
  default-language:    Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is: Main.hs
  other-modules:       SimpleSMT.Tests.SExpr
                       SimpleSMT.Tests.Solver
                       SimpleSMT.Tests.Sources
  ghc-options:         -threaded -Wall -Werror
  build-depends:       base >= 4.15,
                       bytestring >= 0.10,
                       extra >= 1.7,
                       raw-strings-qq,
                       simple-smt,
                       tasty,
                       tasty-hunit
  default-language:    Haskell2010

source-repository head
  type: git
  location: https://github.com/yav/simple-smt
