name:                simple-smt-z3 
version:             0.1
synopsis:            A simple way to interact with Z3.
description:         A simple way to interact with Z3.
license:             BSD3
license-file:        ../LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      ../src
  main-is: Z3.hs
  exposed-modules:     SimpleSMT.Solver.Z3
  other-modules:       SimpleSMT.SExpr
                       SimpleSMT.Solver
  build-depends:       base >= 4.15,
                       simple-smt,
                       containers >= 0.6,
                       bytestring >= 0.10,
                       inline-c
  if os(darwin) || os(windows)
    extra-libraries:
        z3
  else
    extra-libraries:
        gomp z3 gomp
  default-language: Haskell2010
