name:                simple-smt-z3 
version:             0.1
synopsis:            A simple way to interact with Z3.
description:         A simple way to interact with Z3.
license:             BSD3
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  exposed-modules:     SimpleSMT.Solver.Z3
  build-depends:       base >= 4.15,
                       simple-smt,
                       containers >= 0.6,
                       bytestring >= 0.10,
                       inline-c
  -- inspired from haskell-z3
  if os(darwin) || os(windows)
    extra-libraries:
        z3
  else
    extra-libraries:
        gomp z3 gomp
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is: Main.hs
  ghc-options:         -threaded -Wall -Werror
  build-depends:       base >= 4.15,
                       bytestring >= 0.10,
                       simple-smt,
                       simple-smt-z3,
                       simple-smt-tests,
                       tasty
  default-language:    Haskell2010