name:                simple-smt-tests
version:             0.1
synopsis:            Testing SimpleSMT backends.
description:         Testing SimpleSMT backends.
license:             BSD3
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Werror
  exposed-modules:     SimpleSMT.Tests
  other-modules:       SimpleSMT.Tests.SExpr
                       SimpleSMT.Tests.Solver
                       SimpleSMT.Tests.Sources
  build-depends:       base >= 4.15,
                       bytestring >= 0.10,
                       extra >= 1.7,
                       raw-strings-qq,
                       simple-smt,
                       tasty,
                       tasty-hunit
  default-language: Haskell2010